[project]
name = "salt-bundle"
version = "0.1.3"
description = "Salt package manager prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pydantic>=1.10,<2",
    "pyyaml",
    "semver>=3.0.0",
    "requests",
    "PyGithub>=2.0.0",
]

[project.scripts]
salt-bundle = "salt_bundle.cli:main"

[project.entry-points."salt.loader"]
fileserver_roots = "salt_bundle.loader:file_roots"
ext_pillar = "salt_bundle.loader:ext_pillar"

[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
