[project]
name = "salt-bundle"
version = "1.2.0"
description = "Salt package manager prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pydantic>=2.0.0",
    "pyyaml",
    "semver>=3.0.0",
    "requests",
    "PyGithub>=2.0.0",
]

[project.scripts]
salt-bundle = "salt_bundle.cli:main"

[project.entry-points."salt.loader"]
module_dirs = "salt_bundle.ext.loader:module_dirs"
auth_dirs = "salt_bundle.ext.loader:auth_dirs"
states_dirs = "salt_bundle.ext.loader:states_dirs" #TODO black magic. States not imnported in salt-ssh without this line
state_dirs = "salt_bundle.ext.loader:states_dirs"
cache_dirs = "salt_bundle.ext.loader:cache_dirs"
executor_dirs = "salt_bundle.ext.loader:executor_dirs"
grain_dirs = "salt_bundle.ext.loader:grains_dirs"
log_handlers_dirs = "salt_bundle.ext.loader:log_handlers_dirs"
matchers_dirs = "salt_bundle.ext.loader:matchers_dirs"
metaproxy_dirs = "salt_bundle.ext.loader:metaproxy_dirs"
netapi_dirs = "salt_bundle.ext.loader:netapi_dirs"
pillar_dirs = "salt_bundle.ext.loader:pillar_dirs"
queue_dirs = "salt_bundle.ext.loader:queue_dirs"
returner_dirs = "salt_bundle.ext.loader:returner_dirs"
roster_dirs = "salt_bundle.ext.loader:roster_dirs"
runner_dirs = "salt_bundle.ext.loader:runner_dirs"
sdb_dirs = "salt_bundle.ext.loader:sdb_dirs"
serializers_dirs = "salt_bundle.ext.loader:serializers_dirs"
outputter_dirs = "salt_bundle.ext.loader:outputter_dirs"
pkgdb_dirs = "salt_bundle.ext.loader:pkgdb_dirs"
pkgfiles_dirs = "salt_bundle.ext.loader:pkgfiles_dirs"
top_dirs = "salt_bundle.ext.loader:top_dirs"
util_dirs = "salt_bundle.ext.loader:utils_dirs"
renderer_dirs = "salt_bundle.ext.loader:render_dirs"
wrapper_dirs = "salt_bundle.ext.loader:wrapper_dirs"
engine_dirs = "salt_bundle.ext.loader:engines_dirs"
proxy_dirs = "salt_bundle.ext.loader:proxy_dirs"
cloud_dirs = "salt_bundle.ext.loader:cloud_dirs"
beacon_dirs = "salt_bundle.ext.loader:beacons_dirs"
thorium_dirs = "salt_bundle.ext.loader:thorium_dirs"
tokens_dirs = "salt_bundle.ext.loader:tokens_dirs"
wheel_dirs = "salt_bundle.ext.loader:wheel_dirs"
fileserver_dirs = "salt_bundle.ext.loader:fileserver_dirs"
configure = "salt_bundle.ext.loader:configure"

[project.entry-points."salt.loader.ext_pillar"]
saltbundle = "salt_bundle.ext.pillar.saltbundle:ext_pillar"

[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
